       refuel during flight. Fuel club will refill and sell you water cheaply.
       (#980, #993, #992, #1018, #1032, #1034)
     * New thruster and laser graphics (#945, #962, #149, #148, #973)
     * Heading-hold flight mode (press CTRL while changing flight mode) (#450, #990)
     * Hungarian translation (#947, #894)

   * Minor changes and tweaks
     * LED effect on timeaccel buttons (#946, #153)
     * Render projectiles out to 20km from the camera (#957)
     * FOV is now specified vertically (and correctly) (#971)
     * Cargo screen updates automatically when cargo changes (#982)
     * Fewer background stars, but brighter. Looks about the same but takes
       less effort to construct and draw (#1020)
     * Change death spin to a simple zoom (#916, #1033)

   * Fixes
     * Updated zlib and libpng DLLs for MSVC to fix screenshot crash (#942, #645)
     * Only allow missiles to be fired in open flight (#951)
     * Assassinations module now uses character classes for character variety
       and consistency (#953, #948)
     * Assassination targets will now gracefully handle an autopilot failure
       when taking off (#955, #950)
     * HDR visuals removed (#939, #963)
     * Fix projectile collision checks (#965)
     * Various scanner range fixes (#944)
     * Make sure all bodies have a minimum radius of at least 10km (#968, #321, #301)
     * Fix crash when requesting system information whilst in hyperspace (#975)
     * Messages no longer cause the game to un-pause when they clear (#966)
     * Game no longer quits if you cancel loading from the main menu (#920)
     * Fix game crash if a script tries to add or remove a negative amount of
       cargo or equipment (#982)
     * Fix flipped Hammerhead "neck" textures (#986)
     * Don't show "fly to" option for combat target if the player does not
       have an autopilot fitted (#988)
     * Close comms menu on hyperspace (#996, #984)